# oop_lab_1

./: README.md
lab1/: CMakeLists.txt  ReadMe.md
lab1/include/: count_one.h
lab1/src/: count_one.cpp  main.cpp
lab1/tests/: test_case.cpp
